[package]
name = "packet_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
sha2 = "0.10"

[[bin]]
name = "packet_service"
path = "src/main.rs"
